# object_dataset_building

./: CMakeLists.txt  README.md  package.xml
src/: dataset_builder.cpp
src/filtering/: frustumFiltering.cpp  frustumFiltering.hpp  ransacFiltering.cpp  ransacFiltering.hpp
src/tools/: customTypedef.hpp  vision_tools.cpp  vision_tools.hpp
src/tools/python_tools/: dataset_tools.py
